# tech-challenge-fiap

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: comercializacao.csv  exportacao.csv  importacao.csv  processamento.csv  producao.csv
src/api/: server.py
src/api/routes/: __init__.py  base_routes.py  embrapa_routes.py
src/usecases/: __init__.py
src/usecases/embrapa_comercializacao/: __init__.py  dtos.py
src/usecases/embrapa_exportacao/: __init__.py  dtos.py
src/usecases/embrapa_importacao/: __init__.py  dtos.py
src/usecases/embrapa_processamento/: __init__.py  dtos.py
src/usecases/embrapa_producao/: __init__.py  dtos.py
src/utils/: scrape_utils.py
